Revision history for Test-Run-CmdLine

0.0001_04   Sat Oct  7 20:43:36 IST 2006
    * Added UNIVERSAL::require to the pre-requisites.

0.0001_03   Thu Oct  5 13:52:55 IST 2006
    * Fixed the tests in Test-Run-CmdLine so they'll pass even if plugins 
    are specified by deafult (or any other $ENV{HARNESS_.*}) shenanigan.
    * Adapted to the new ($self, $args) instead of ($self, %args) interface
    of Test::Run.
    * Changed the interface of the classes' constructors to accept a single
    $args hash ref, instead of %args.

0.0001_02   Mon Mar 13 18:44:23 IST 2006
    * Added docs/Namespace-Planning.txt for the namespace planning.
    * Made Test::Run::CmdLine into a driver+plugins architecture
      with a backend driver and plugins.
    * Created a Test::Run::CmdLine::Prove class with the implementation
      of the "runprove" command line utility to run tests directly from
      the command line.
    * Added the documentation of prove to the end of the runprove program
      itself and adapted it for runprove.
    * Added pod to Test::Run::CmdLine.
    * Added many tests.

    
0.0001_01   Tue Nov 29 22:57:02 IST 2005
    * Initial CPAN.pm version. Works sort of and has a functional "runprove"
    utility.
